2005-02-09  Lennart Staflin  <lenst@lysator.liu.se>

	* psgml.el (sgml-debug): remove sgml-log-message
	reemove log related keybinding/menu entry

	* psgml-parse.el (sgml-compile-dtd, sgml-check-entities)
	(sgml-log-warning, sgml-error): remove sgml-log-message 
	(sgml-entity-stack): new func

	* psgml-ids.el: New file (From: Jean-Daniel.Fekete)
	* psgml-edit.el: ID/IDREF patch (From: Jean-Daniel.Fekete)
	* psgml-maint.el: ID/IDREF patch (From: Jean-Daniel.Fekete)
	* psgml-parse.el: ID/IDREF patch (From: Jean-Daniel.Fekete)

2003-06-09  Lennart Staflin  <lenst@lysator.liu.se>

	* psgml-parse.el (sgml-modify-dtd): added some error checking for
	the has-seen-elements.

2003-03-28  Lennart Staflin  <lenst@lysator.liu.se>

	* psgml-parse.el (sgml-do-processing-instruction): new handling
	of <?PSGML> processing instruction.
	(sgml--pi-psgml-handler): new func
	(sgml--pi-element-handler): new func. handles <?PSGML ELEMENT ..>
	(sgml-psgml-pi-enable-outside-dtd): new variable. controls when
	<?PSGML> is evaluated.

2003-03-27  Lennart Staflin  <lenst@lysator.liu.se>

	* psgml-parse.el: fix wrong file name in error trace

2003-03-25  Lennart Staflin  <lenst@lysator.liu.se>

	* psgml-dtd.el (sgml-parse-parameter-literal):
	Modified to use unibyte-char-to-multibyte if
	enable-multibyte-characters. I hope this is correct.

2003-03-25  Lennart Staflin  <lenst@lysator.liu.se>

	* psgml-dtd.el (sgml-parse-parameter-literal): 
	Modified to use unibyte-char-to-multibyte if
	enable-multibyte-characters. I hope this is correct.

2003-02-12  Lennart Staflin  <lenst@lysator.liu.se>

	* psgml-parse.el (sgml-setup-doctype): add Predefined Entities
	for XML.

2003-01-24  Lennart Staflin  <lenst@lysator.liu.se>

	* psgml-parse.el (sgml-do-move): undo wrong optimization, fix
	problem with non working exclusions.

2002-12-13  Lennart Staflin  <lenst@lysator.liu.se>

	* Version 1.3.1 released

2002-09-19  Lennart Staflin  <lenst@lysator.liu.se>
