@@ -21,12 +21,15 @@
     ("tc17.html")
     ("tc18.el")
     ("tc19.sgml" (warning "B end-tag implied by B start-tag"))
+    ("tc20.sgml" (warning "Start-tag of undefined element FOO"))
+    ("tc21.sgml")
     ))
 
 (defun testsuit-run-test-case (case-description)
   (let* ((file (first case-description))
          (expected (rest case-description))
-         (sgml-show-warnings t))
+         (sgml-show-warnings t)
+         (warning-expected nil))
     (setq sgml-catalog-assoc nil)       ; To allow testing catalog parsing
     (setq sgml-ecat-assoc nil)
     (message "--Testing %s" file)
@@ -37,7 +40,7 @@
           (if (string-match "\\.el$" (buffer-file-name))
               (progn (eval-buffer))
             (message "current buffer: %s" (current-buffer))
-            (sgml-parse-prolog)
+            (sgml-load-doctype)
             ;;(sgml-next-trouble-spot)
             (sgml-parse-until-end-of nil)))
       (error
@@ -45,18 +48,23 @@
            (case (caar expected)
              (error (debug)))
          (error "Unexpected %s" errcode))))
-    (when (and (null expected) sgml-warning-message-flag)
-      (error "Unexpected warnings"))
-    (while (and expected (eq (caar expected) 'warning))
-      (let ((warning-pattern (cadar expected)))
-        (with-current-buffer  "*Messages*"
-          (goto-char (point-min))
-          (cond ((re-search-forward warning-pattern nil t)
-                 (setq expected (cdr expected)))
-                (t
-                 (error "No %s warning" warning-pattern))))))
-    (when expected
-      (error "The expected result %s didn't" expected))))
+
+    (while (and expected)
+      (case (caar expected)
+        (warning
+         (setq warning-expected t)
+         (let ((warning-pattern (cadar expected)))
+           (with-current-buffer  "*Messages*"
+             (goto-char (point-min))
+             (or (re-search-forward warning-pattern nil t)
+                 (error "No %s warning" warning-pattern)))))
+        (assert
+         (or (eval (cadar expected))
+             (error "Fail: %s" (cadar expected)))))
+      (setq expected (cdr expected)))
+    (when (and sgml-warning-message-flag (not warning-expected))
+      (error "Unexpected warnings")) ))
+
 
 (defun testsuit-run ()
   (interactive)
