@@ -1,7 +1,13 @@
+2005-02-17  Lennart Staflin  <lenst@lysator.liu.se>
+
+	* psgml-parse.el (sgml-parse-prolog): apply sgml-general-case to
+	sgml-default-doctype-name.
+
+
 2005-02-09  Lennart Staflin  <lenst@lysator.liu.se>
 
 	* psgml.el (sgml-debug): remove sgml-log-message
-	reemove log related keybinding/menu entry
+	remove log related keybinding/menu entry
 
 	* psgml-parse.el (sgml-compile-dtd, sgml-check-entities)
 	(sgml-log-warning, sgml-error): remove sgml-log-message 
